--- a/src/view/Books.fxml
+++ b/src/view/Books.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="634.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BooksController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="759.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BooksController">
    <children>
       <Label fx:id="lblTitle" alignment="CENTER" layoutX="250.0" layoutY="14.0" prefHeight="39.0" prefWidth="94.0" text="Books" textFill="#0b0bd3">
          <font>
@@ -49,13 +48,14 @@
       <JFXButton fx:id="btnSave" buttonType="RAISED" layoutX="459.0" layoutY="205.0" onAction="#saveOnAction" style="-fx-background-color: #74b9ff;" text="Save" />
       <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="521.0" layoutY="205.0" onAction="#deleteOnAction" style="-fx-background-color: #a29bfe;" text="Delete" />
       <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="384.0" layoutY="205.0" onAction="#updateOnAction" style="-fx-background-color: #81ecec;" text="Update" />
-      <TableView layoutX="3.0" layoutY="256.0" prefHeight="222.0" prefWidth="634.0">
+      <TableView fx:id="tblBooks" layoutX="3.0" layoutY="256.0" prefHeight="272.0" prefWidth="752.0">
         <columns>
           <TableColumn fx:id="colBookID" prefWidth="84.0" text="Book ID" />
           <TableColumn fx:id="colTitle" prefWidth="160.0" text="Title" />
             <TableColumn fx:id="colAuthor" prefWidth="158.0" text="Author" />
             <TableColumn fx:id="colPbYear" prefWidth="93.0" text="Publication Year" />
             <TableColumn fx:id="colCtName" prefWidth="135.0" text="Category Name" />
+            <TableColumn fx:id="colStatus" prefWidth="135.0" text="status" />
         </columns>
       </TableView>
    </children>
