--- a/src/view/BookCategories.fxml
+++ b/src/view/BookCategories.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookCategoriesController ">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookCategoriesController">
    <children>
       <Label fx:id="lblTitle" alignment="CENTER" layoutX="186.0" layoutY="14.0" prefHeight="41.0" prefWidth="184.0" text="Book Categories" textFill="#d33131">
          <font>
@@ -37,7 +36,7 @@
       <JFXButton fx:id="btnSave" buttonType="RAISED" layoutX="310.0" layoutY="226.0" onAction="#saveOnAction" style="-fx-background-color: #ff7675;" text="Save" />
       <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="377.0" layoutY="226.0" onAction="#updateOnAction" style="-fx-background-color: #00cec9;" text="Update" />
       <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="454.0" layoutY="226.0" onAction="#deleteOnAction" style="-fx-background-color: #74b9ff;" text="Delete" />
-      <TableView fx:id="tblBookCategories" layoutX="2.0" layoutY="259.0" prefHeight="225.0" prefWidth="600.0">
+      <TableView fx:id="tblBookCategories" layoutX="2.0" layoutY="259.0" onMouseClicked="#selectOnMouseClicked" prefHeight="225.0" prefWidth="600.0">
         <columns>
           <TableColumn fx:id="colCategoryID" prefWidth="104.0" text="Category ID" />
           <TableColumn fx:id="colCategoryName" prefWidth="128.0" text="Category Name" />
